Prevent color picker from getting cut off

--- a/src/aics-image-viewer/components/ControlPanel/styles.scss
+++ b/src/aics-image-viewer/components/ControlPanel/styles.scss
@@ -7,7 +7,6 @@
 .control-panel {
     flex: 1 auto;
     order: 1;
-    overflow-y: scroll;
     max-width: 540px;
     .ant-card-head {
         border-bottom: none;
